# python-freshdesk

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  setup.py
freshdesk/v2/: api.py
