[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freshdesk"
version = "1.3.9"
description = "Python wrapper for Freshdesk API"
authors = [{ name = "Jochen Werner", email = "jochen.werner@skaylink.com" }]
requires-python = "~=3.8"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests",
    "python-dateutil",
]

[dependency-groups]
dev = [
    "pytest~=8.0",
    "black~=24.0",
]

